--- a/local/src_v6/components/catalog/sl-prod-nav/index.pug
+++ b/local/src_v6/components/catalog/sl-prod-nav/index.pug
@@ -13,6 +13,9 @@ include ../../sliders/template/sl-prod-nav/index
         },
         {
             pic: 'sl-prod-1.png'
+        },
+        {
+            pic: 'sl-prod-1.png'
         }
     ]
 })
