--- a/local/src_v6/components/sliders/template/sl-prod/component.pug
+++ b/local/src_v6/components/sliders/template/sl-prod/component.pug
@@ -1,2 +1,3 @@
 include ../../../../components/util/slick/
 include ../../../../components/util/magnificPopup/
+include ../../../../components/util/setSimilarSlidesHeight/
