--- a/local/templates/.default/card.html
+++ b/local/templates/.default/card.html
@@ -911,6 +911,7 @@
 																									<div class="slide"><a class="inner" href="img/tmp/sl-prod-1.png"><img class="img" src="img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																									<div class="slide"><a class="inner" href="img/tmp/sl-prod-0.png"><img class="img" src="img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																									<div class="slide"><a class="inner" href="img/tmp/sl-prod-1.png"><img class="img" src="img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
+																									<div class="slide"><a class="inner" href="img/tmp/sl-prod-1.png"><img class="img" src="img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																								</div>
 																							</div>
 																						</div>
@@ -918,16 +919,19 @@
 																							<div class="wrap cursor inited-not">
 																								<div class="slider">
 																									<div class="slide">
-																										<div class="inner"><img class="img" src="img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																										<div class="inner"><img class="img" src="img/tmp/sl-prod-0.png" alt="nav"></div>
 																									</div>
 																									<div class="slide">
-																										<div class="inner"><img class="img" src="img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																										<div class="inner"><img class="img" src="img/tmp/sl-prod-1.png" alt="nav"></div>
 																									</div>
 																									<div class="slide">
-																										<div class="inner"><img class="img" src="img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																										<div class="inner"><img class="img" src="img/tmp/sl-prod-0.png" alt="nav"></div>
 																									</div>
 																									<div class="slide">
-																										<div class="inner"><img class="img" src="img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																										<div class="inner"><img class="img" src="img/tmp/sl-prod-1.png" alt="nav"></div>
+																									</div>
+																									<div class="slide">
+																										<div class="inner"><img class="img" src="img/tmp/sl-prod-1.png" alt="nav"></div>
 																									</div>
 																								</div>
 																							</div>
@@ -961,12 +965,12 @@
 															</div>
 														</div>
 														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
+																															<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span></button>
 														</div>
 														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary-outline with-icon icon-left addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
+																															<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
 														</div>
-														<div class="prod__col prod__col--buy">
+														<div class="prod__col prod__col--buy d-none d-lg-block">
 																															<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
 														</div>
 													</div>
@@ -993,7 +997,49 @@
 																					</div>
 																				</div>
 												</div>
-												<div class="tab-pane fade" id="tab-2" role="tabpanel"></div>
+												<div class="tab-pane fade" id="tab-2" role="tabpanel">
+													<div class="prod__cost">107.10 BYN</div>
+													<div class="prod__row prod__row--buy row">
+														<div class="prod__col prod__col--buy">
+															<div class="quantity js-quantity">
+																<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
+																<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
+																<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
+															</div>
+														</div>
+														<div class="prod__col prod__col--buy">
+																															<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span></button>
+														</div>
+														<div class="prod__col prod__col--buy">
+																															<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
+														</div>
+														<div class="prod__col prod__col--buy d-none d-lg-block">
+																															<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
+														</div>
+													</div>
+																				<div class="accordion" id="accordion-30">
+																					<div class="acc-group">
+																						<div class="panel">
+																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
+																							<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
+																							</div>
+																						</div>
+																						<div class="panel">
+																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-1"><span>Доставка</span></a></div>
+																							<div class="collapse" id="accordion-1" data-parent="#accordion-30">
+																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
+																							</div>
+																						</div>
+																						<div class="panel">
+																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-2"><span>Обмен и возврат</span></a></div>
+																							<div class="collapse" id="accordion-2" data-parent="#accordion-30">
+																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -1044,7 +1090,7 @@
 																																																					<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																				</div>
 																																				<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																					<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																					<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																				</div>
 																																			</div>
 																																		</div>
@@ -1082,7 +1128,7 @@
 																																																					<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																				</div>
 																																				<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																					<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																					<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																				</div>
 																																			</div>
 																																		</div>
@@ -1120,7 +1166,7 @@
 																																																					<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																				</div>
 																																				<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																					<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																					<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																				</div>
 																																			</div>
 																																		</div>
@@ -1158,7 +1204,7 @@
 																																																					<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																				</div>
 																																				<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																					<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																					<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																				</div>
 																																			</div>
 																																		</div>
@@ -1196,7 +1242,7 @@
 																																																					<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																				</div>
 																																				<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																					<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																					<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																				</div>
 																																			</div>
 																																		</div>
