--- a/local/templates/.default/catalog.html
+++ b/local/templates/.default/catalog.html
@@ -1213,7 +1213,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1249,7 +1249,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1285,7 +1285,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1327,7 +1327,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1363,7 +1363,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1399,7 +1399,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1441,7 +1441,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1477,7 +1477,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
@@ -1513,7 +1513,7 @@
 																																																<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																															</div>
 																															<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																															</div>
 																														</div>
 																													</div>
