--- a/local/templates/.default/index.html
+++ b/local/templates/.default/index.html
@@ -1116,7 +1116,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1154,7 +1154,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1192,7 +1192,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1230,7 +1230,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1268,7 +1268,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1328,7 +1328,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1366,7 +1366,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1404,7 +1404,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1442,7 +1442,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1480,7 +1480,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1540,7 +1540,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1578,7 +1578,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1616,7 +1616,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1654,7 +1654,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
@@ -1692,7 +1692,7 @@
 																																																							<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span>быстрая покупка</span></button>
 																																								</div>
 																																								<div class="card-links-3-card__col card-links-3-card__col--basket">
-																																																							<button class="btn btn-primary-outline with-icon addToBasket" type="button"><span class="icon"></span></button>
+																																																							<button class="btn btn-primary-outline with-icon addToBasket js-addToBasket" type="button"><span class="icon"></span></button>
 																																								</div>
 																																							</div>
 																																						</div>
