--- a/local/src_v6/components/pages/card/prod/style.scss
+++ b/local/src_v6/components/pages/card/prod/style.scss
@@ -3,26 +3,42 @@
   &__row {
 
     &--top {
-      margin-bottom: 27px;
+      margin-bottom: 17px;
+
+      @media (max-width: $screen-sm-max) {
+        margin-bottom: 20px;
+      }
     }
 
     &--buy {
       margin-left: -5px;
       margin-right: -5px;
       margin-bottom: 65px;
+
+      @media (max-width: $screen-sm-max) {
+        margin-bottom: 20px;
+      }
     }
   }
 
   &__col {
 
     &--right {
-      padding-right: 50px;
+      padding-left: 50px;
+
+      @media (max-width: $screen-lg-max) {
+        padding-left: 30px;
+      }
+
+      @media (max-width: $screen-md-max) {
+        padding-left: 10px;
+      }
     }
 
     &--buy {
       padding-left: 5px;
       padding-right: 5px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
   }
 
@@ -34,6 +50,11 @@
       line-height: 1.34;
       text-transform: none;
       margin-bottom: 29px;
+
+      @media (max-width: $screen-sm-max) {
+        font-size: 20px;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -41,6 +62,10 @@
     font-size: 18px;
     line-height: 1.78;
     color: $brand-gray-10;
+
+    @media (max-width: $screen-sm-max) {
+      font-size: 14px;
+    }
     
     a {
       color: $brand-gray-10;
@@ -61,6 +86,10 @@
     line-height: 1.26;
     color: $brand-gray-10;
     margin-bottom: 42px;
+
+    @media (max-width: $screen-sm-max) {
+      margin-bottom: 20px;
+    }
   }
 
   .btn {
