--- a/local/src_v6/components/sliders/template/sl-prod/style.scss
+++ b/local/src_v6/components/sliders/template/sl-prod/style.scss
@@ -1,20 +1,21 @@
 .sl-prod-wrap {
   position: relative;
+  max-width: 530px;
+  margin-bottom: 20px;
 
-  @media (max-width: $screen-md-max) {
-    max-width: 360px;
-    margin: 0 auto 20px;
-  }
+  //@media (max-width: $screen-md-max) {
+  //  max-width: 360px;
+  //  margin: 0 auto 20px;
+  //}
 }
 
 .sl-prod {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
   .wrap {
     position: relative;
     background-color: $body-bg-color;
-    border: 1px solid $border-color-base;
 
     &.inited-not {
 
@@ -39,8 +40,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 286px;
-    padding: 20px;
+    position: relative;
+    //height: 600px;
+    height: 100%;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      border: 1px solid #e5e5e5;
+    }
   }
 
   .img {
